Changed favico to remote file url

--- a/src/app.html
+++ b/src/app.html
@@ -9,10 +9,27 @@
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
 		/>
-		<link rel="apple-touch-icon" sizes="180x180" href="src\lib\assets\apple-touch-icon.png" />
-		<link rel="icon" type="image/png" sizes="32x32" href="src\lib\assets\favicon-32x32.png" />
-		<link rel="icon" type="image/png" sizes="16x16" href="src\lib\assets\favicon-16x16.png" />
-		<link rel="manifest" href="src\lib\assets\site.webmanifest" />
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="https://github.com/cs132gelotin/jeepney-modernization/blob/9802ca544149ddf998264753f9e6c3afaa669e02/src/lib/assets/apple-touch-icon.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="https://github.com/cs132gelotin/jeepney-modernization/blob/9802ca544149ddf998264753f9e6c3afaa669e02/src/lib/assets/favicon-32x32.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="https://github.com/cs132gelotin/jeepney-modernization/blob/9802ca544149ddf998264753f9e6c3afaa669e02/src/lib/assets/favicon-16x16.png"
+		/>
+		<link
+			rel="manifest"
+			href="https://github.com/cs132gelotin/jeepney-modernization/blob/9802ca544149ddf998264753f9e6c3afaa669e02/src/lib/assets/site.webmanifest"
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 		<script src="https://kit.fontawesome.com/911c553109.js" crossorigin="anonymous"></script>
