Avatar changed to use base paths

--- a/src/app.html
+++ b/src/app.html
@@ -1,4 +1,7 @@
 <!doctype html>
+<script lang="ts">
+	import { base } from '$app/paths';
+</script>
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
