Fixed src and href problems

--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <script lang="ts">
-	import { base } from '$app/paths';
+	import icon32 from '$lib/assets/favicon-32x32.png';
+	import icon16 from '$lib/assets/favicon-16x16.png';
+	import appleTouchIcon from '$lib/assets/apple-touch-icon.png';
+	import siteManifest from '$lib/assets/site.webmanifest';
 </script>
 <html lang="en">
 	<head>
@@ -15,23 +18,23 @@
 		<link
 			rel="apple-touch-icon"
 			sizes="180x180"
-			href="https://github.com/cs132gelotin/jeepney-modernization/blob/9802ca544149ddf998264753f9e6c3afaa669e02/src/lib/assets/apple-touch-icon.png"
+			href="https://raw.githubusercontent.com/cs132gelotin/jeepney-modernization/9802ca544149ddf998264753f9e6c3afaa669e02/src/lib/assets/apple-touch-icon.png"
 		/>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="32x32"
-			href="https://github.com/cs132gelotin/jeepney-modernization/blob/9802ca544149ddf998264753f9e6c3afaa669e02/src/lib/assets/favicon-32x32.png"
+			href="https://raw.githubusercontent.com/cs132gelotin/jeepney-modernization/9802ca544149ddf998264753f9e6c3afaa669e02/src/lib/assets/favicon-32x32.png"
 		/>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="16x16"
-			href="https://github.com/cs132gelotin/jeepney-modernization/blob/9802ca544149ddf998264753f9e6c3afaa669e02/src/lib/assets/favicon-16x16.png"
+			href="https://raw.githubusercontent.com/cs132gelotin/jeepney-modernization/blob/9802ca544149ddf998264753f9e6c3afaa669e02/src/lib/assets/favicon-16x16.png"
 		/>
 		<link
 			rel="manifest"
-			href="https://github.com/cs132gelotin/jeepney-modernization/blob/9802ca544149ddf998264753f9e6c3afaa669e02/src/lib/assets/site.webmanifest"
+			href="https://raw.githubusercontent.com/cs132gelotin/jeepney-modernization/blob/9802ca544149ddf998264753f9e6c3afaa669e02/src/lib/assets/site.webmanifest"
 		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
